change styling and add admin subnav

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,15 @@ nav {
     }
   }
 }
+
+#subnav {
+  background-color: #b71c1c;
+  height: 30px;
+  line-height: 30px;
+
+  li {
+    a {
+      font-size: 12px;
+    }
+  }
+}
