--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,21 +1,25 @@
-<div class="container">
-  <div class='section'>
-    <%= link_to '<i class="material-icons">add</i>'.html_safe, new_post_path,
-      class: 'btn-floating btn-large waves-effect waves-light red right' %>
-  </div> 
-  <% @posts.each do |post| %>
-    <div class='section'>
-      <div class='row card-panel'>
-        <div class='col s3'>
-          <%= link_to image_tag(post.image_url(:thumb)), post %>
-        </div>
-        <div class='col s9 <%= if post.image_url.nil? then 'offset-s3' end %>'>
+<% @posts.each do |post| %>
+  <div class='parallax-container valign-wrapper'>
+      <div class='section'>
+      <div class='row'>
+        <div class='col s12'>
           <h4><%= link_to post.title, post %></h4>
-          <p><%= post.content %></p>
+        </div>
+      </div>
+      <div class='row'>
+        <div class='col s12'>
+          <p><%= link_to post.content, post %></p>
+        </div>
+      </div>
+      <div class='row'>
+        <div class='col s12'>
           <%= link_to 'Edit', edit_post_path(post), class: 'waves-effect waves-light btn' %>
           <%= link_to 'Delete', post_path(post), method: :delete, data: { confirm: 'Are you sure?' }, class: 'waves-effect waves-light btn red' %>
         </div>
       </div>
     </div>
-  <% end %>
-</div>
+    <div class='parallax'>
+      <%= image_tag(post.image_url) %>
+    </div>
+  </div>
+<% end %>
