--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -2,13 +2,17 @@
   <div class='section'>
     <%= form_for @post, html: { multipart: true } do |f| %>
       <div class='card-panel'>
-        <%= f.label :title %>
-        <%= f.text_field :title %>
-        <%= f.label :content %>
-        <%= f.text_area :content, class: 'materialize-textarea' %>
+        <div class='input-field'>
+          <%= f.label :title %>
+          <%= f.text_field :title %>
+        </div>
+        <div class='input-field'>
+          <%= f.label :content %>
+          <%= f.text_area :content, class: 'materialize-textarea' %>
+        </div>
         <div class='file-field input-field'>
           <div class='btn'>
-            <span>Photo</span>
+            <i class='material-icons'>perm_media</i>
             <%= f.file_field :image %>
           </div>
           <div class='file-path-wrapper'>
