Finish user signup

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,3 +23,17 @@ nav {
     }
   }
 }
+
+.alert-danger {
+  color: #b71c1c;
+  font-weight: bold;
+}
+
+.alert-success {
+  color: #26a69a;
+  font-weight: bold;
+}
+
+.alert_message {
+  color: #b71c1c;
+}
