--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,18 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-<%= render 'layouts/header' %>
-<%= render 'layouts/adminsubnav' %>
-<%= yield %>
+  <%= render 'layouts/header' %>
+  <%= render 'layouts/adminsubnav' %>
+
+  <% flash.each do |message_type, message| %>
+    <div class='container'>
+      <div class='row card-panel'>
+        <div class='alert alert-<%= message_type %>'><%= message %></div>
+      </div>
+    </div>
+  <% end %>
+
+  <%= yield %>
 
 </body>
 </html>
