Added devise and admin auth

--- a/app/views/layouts/_adminsubnav.html.erb
+++ b/app/views/layouts/_adminsubnav.html.erb
@@ -1,7 +1,9 @@
-<nav id='subnav'>
-  <div class='row'>
-    <ul class='right hide-on-med-and-down'>
-      <li><%= link_to 'New Post', new_post_path %></li>
-    </ul>
-  </div>
-</nav>
+<% if current_user.try(:admin?) %>
+  <nav id='subnav'>
+    <div class='row'>
+      <ul class='right hide-on-med-and-down'>
+        <li><%= link_to 'New Post', new_post_path %></li>
+      </ul>
+    </div>
+  </nav>
+<% end %>
