--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,6 +6,11 @@
     <ul id='nav-mobile' class='right hide-on-med-and-down'>
       <li><%= link_to 'Blog', posts_path %></li>
       <li><a href="#">Contact</a></li>
+      <% if current_user %>
+        <li><%=link_to 'Logout', destroy_user_session_path, :method => :delete %></li>
+      <% else %> 
+        <li><%=link_to 'Sign in', new_user_session_path %></li>      
+      <% end %>
     </ul>
   </div>
 </nav>
