--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -11,8 +11,10 @@
     <div class='col s12'>
       <h4><%= @post.title %></h4>
       <p><%= simple_format @post.content %></p>
-      <%= link_to 'Edit', edit_post_path(@post), class: 'waves-effect waves-light btn' %>
-      <%= link_to 'Delete', post_path(@post), method: :delete, data: { confirm: 'Are you sure?' }, class: 'waves-effect waves-light btn red' %>
+      <% if current_user.try(:admin?) %>
+        <%= link_to 'Edit', edit_post_path(@post), class: 'waves-effect waves-light btn' %>
+        <%= link_to 'Delete', post_path(@post), method: :delete, data: { confirm: 'Are you sure?' }, class: 'waves-effect waves-light btn red' %>
+      <% end %>
     </div>
   </div>
 </div>
