--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,13 @@
 <nav>
-  <div class='nav-wrapper'>
+  <div class='nav-wrapper white'>
     <a href='/' class='brand-logo'>
       <span class='logo_letter'>c</span>yan<span class='logo_letter'>r</span>obb
     </a>
     <ul id='nav-mobile' class='right hide-on-med-and-down'>
-      <li><%= link_to 'Blog', posts_path %></li>
-      <li><a href="#">Contact</a></li>
+      <%= nav_link 'About', root_path %>
+      <%= nav_link 'Portfolio', '#' %>
+      <%= nav_link 'Blog', posts_path %>
+      <%= nav_link 'Contact', '#' %>
       <% if current_user %>
         <li><%=link_to 'Logout', destroy_user_session_path, :method => :delete %></li>
       <% else %> 
