add about me and footer

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,7 +4,7 @@
       <span class='logo_letter'>c</span>yan<span class='logo_letter'>r</span>obb
     </a>
     <ul id='nav-mobile' class='right hide-on-med-and-down'>
-      <%= nav_link 'About', root_path %>
+      <%= nav_link 'About', about_path %>
       <%= nav_link 'Portfolio', '#' %>
       <%= nav_link 'Blog', posts_path %>
       <%= nav_link 'Contact', '#' %>
