--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,12 +1,26 @@
-<div class='parallax-container valign-wrapper'>
-	<div class='container'>
-	 	<div id='banner-text' class='col s12'>
-	      <h1>Hello, I'm <span class='highlight'>Ryan Cobb</span>. I'm a Web Developer, Mechanical Engineer, Photographer and Musician.</h1>
-	    </div>
-	    <div><%= link_to "View My Work", "#" , class: 'waves-effect waves-light btn' %></div>
-	</div>
-
-	<div class='parallax'>
-	  <%= image_tag("jumbotron.jpg") %>
+<div class='container aboutme'>
+	<div class='row'>
+		<div class='col s12 m6'>
+			<div class='card-panel'>
+				<%= image_tag 'me.jpg', :style => 'width: 100%; height: auto;' %>
+			</div>
+		</div>
+		<div class='col s12 m6'>
+			<div class=>
+				<h4>About Me</h4>
+				<p>
+				I’m a hobbyist programmer who decided to change careers from mechanical 
+				engineering to software and web development. I came to this decision after realizing 
+				that I’m most excited at my current job when I get to create programs that help people 
+				do their job’s easier. Since then I’ve immersed myself heavily via online courses, 
+				podcasts and personal projects in an attempt to learn as much as humanly possible. 
+				I realize my path is not traditional, but I am anxious to learn and become more
+				involved in the development community.
+				</p>
+				<p>
+				I spend most of my free time in the mountains either biking, hiking or skiing.
+				</p>
+			</div>
+		</div>
 	</div>
 </div>
