--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,6 +28,10 @@ nav {
 
 .btn {
   background-color: #002760;
+
+  &:hover {
+    background-color: #956982;
+  }
 }
 
 #subnav {
@@ -54,4 +58,8 @@ nav {
 
 .alert_message {
   color: #b71c1c;
+}
+
+.social {
+  width: 40px;
 }
