--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,20 @@
     <a href='/' class='brand-logo'>
       <span class='logo_letter'>c</span>yan<span class='logo_letter'>r</span>obb
     </a>
-    <ul id='nav-mobile' class='right hide-on-med-and-down'>
+    <a href="#" data-activates="side-menu" class="button-collapse"><i class="material-icons navdark">menu</i></a>
+    <ul class='right hide-on-med-and-down'>
+      <%= nav_link 'About', about_path %>
+      <%= nav_link 'Portfolio', '#' %>
+      <%= nav_link 'Blog', posts_path %>
+      <%= nav_link 'Contact', '#' %>
+      <% if current_user %>
+        <li><%=link_to 'Logout', destroy_user_session_path, :method => :delete %></li>
+      <% else %> 
+        <li><%=link_to 'Sign in', new_user_session_path %></li>      
+      <% end %>
+    </ul>
+
+    <ul class='side-nav' id='side-menu'>
       <%= nav_link 'About', about_path %>
       <%= nav_link 'Portfolio', '#' %>
       <%= nav_link 'Blog', posts_path %>
