--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,11 +1,11 @@
 <div class='container aboutme'>
 	<div class='row'>
-		<div class='col s12 m6'>
+		<div class='col m12 l6'>
 			<div class='card-panel'>
 				<%= image_tag 'me.jpg', :style => 'width: 100%; height: auto;' %>
 			</div>
 		</div>
-		<div class='col s12 m6'>
+		<div class='col m12 l6'>
 			<div class=>
 				<h4>About Me</h4>
 				<p>
