--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,4 @@
-<div class='container aboutme'>
+<div class='container top-padding'>
 	<div class='row'>
 		<div class='col m12 l6'>
 			<div class='card-panel'>
@@ -9,11 +9,11 @@
 			<div class=>
 				<h4>About Me</h4>
 				<p>
-				I’m a hobbyist programmer who decided to change careers from mechanical 
-				engineering to software and web development. I came to this decision after realizing 
-				that I’m most excited at my current job when I get to create programs that help people 
-				do their job’s easier. Since then I’ve immersed myself heavily via online courses, 
-				podcasts and personal projects in an attempt to learn as much as humanly possible. 
+				I’m a hobbyist programmer who decided to change careers from mechanical
+				engineering to software and web development. I came to this decision after realizing
+				that I’m most excited at my current job when I get to create programs that help people
+				do their job’s easier. Since then I’ve immersed myself heavily via online courses,
+				podcasts and personal projects in an attempt to learn as much as humanly possible.
 				I realize my path is not traditional, but I am anxious to learn and become more
 				involved in the development community.
 				</p>
