--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,7 +4,7 @@
 	<div class='row'>
 		<div class='col right-align s12'>
 			<%= link_to (image_tag 'github.svg', class: 'social'), 'http://www.github.com/ryancobb' %>
-			<%= link_to (image_tag 'linkedin.svg', class: 'social'), 'http://www.linkedin.com/ryandavidcobb' %>
+			<%= link_to (image_tag 'linkedin.svg', class: 'social'), 'http://www.linkedin.com/in/ryandavidcobb' %>
 			<%= link_to (image_tag 'instagram.svg', class: 'social'), 'https://www.instagram.com/borisyeltsin/' %>
 		</div>
 	</div>
