--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,12 +1,9 @@
-<div class='parallax-container valign-wrapper'>
-	<div class='container'>
-	 	<div id='banner-text' class='col s12'>
+<div class='valign-wrapper'>
+	 	<div id='banner-text' class='welcome-banner'>
+			<div clas="valign">
 	      <h1>Hello, I'm <span class='highlight'>Ryan Cobb</span>. I'm a Web Developer, Mechanical Engineer, Photographer and Musician.</h1>
-	    </div>
-	    <div><%= link_to "View My Work", "#" , class: 'waves-effect waves-light btn' %></div>
-	</div>
-
-	<div class='parallax'>
-	  <%= image_tag("jumbotron.jpg") %>
+				<div><%= link_to "View My Work", portfolio_path , class: 'waves-effect waves-light btn' %></div>
+			</div>
+		</div>
 	</div>
 </div>
