--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,7 +18,7 @@
 
     <ul class='side-nav' id='side-menu'>
       <%= nav_link 'About', about_path %>
-      <%= nav_link 'Portfolio', '#' %>
+      <%= nav_link 'Portfolio', portfolio_path %>
       <%= nav_link 'Blog', posts_path %>
       <%= nav_link 'Contact', '#' %>
       <% if current_user %>
