--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -20,6 +20,9 @@
 				<p>
 				I spend most of my free time in the mountains either biking, hiking or skiing.
 				</p>
+				<p>
+					Feel free to email me at ryan@cyanrobb.com for any work inquiries, questions, or just to say hi.
+				</p>
 			</div>
 		</div>
 	</div>
