--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,15 +10,8 @@
 <body>
   <%= render 'layouts/header' %>
   <%= render 'layouts/adminsubnav' %>
-
-  <% flash.each do |message_type, message| %>
-    <div class='container'>
-      <div class='row card-panel'>
-        <div class='alert alert-<%= message_type %>'><%= message %></div>
-      </div>
-    </div>
-  <% end %>
-
+  <%= render 'layouts/flash' %>
+  
   <%= yield %>
 
   <%= render 'layouts/footer' %>
