--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,27 +1,30 @@
 <% @posts.each do |post| %>
   <div class='parallax-container valign-wrapper'>
-      <div class='section'>
+    <div class="container">
+
       <div class='row'>
-        <div class='col s12'>
           <h4><%= link_to post.title, post %></h4>
-        </div>
       </div>
+
+      <div class="row">
+        <h6><%= time_ago_in_words(post.created_at) %> ago</h6>
+      </div>
+
       <div class='row'>
-        <div class='col s12'>
-          <p><%= link_to post.content, post %></p>
-        </div>
+        <p><%= link_to post.content, post %></p>
       </div>
+
       <% if current_user.try(:admin?) %>
         <div class='row admin_actions'>
-          <div class='col s12'>
-            <%= link_to 'Edit', edit_post_path(post), class: 'waves-effect waves-light btn' %>
-            <%= link_to 'Delete', post_path(post), method: :delete, data: { confirm: 'Are you sure?' }, class: 'waves-effect waves-light btn red' %>
-          </div>
+          <%= link_to 'Edit', edit_post_path(post), class: 'waves-effect waves-light btn' %>
+          <%= link_to 'Delete', post_path(post), method: :delete, data: { confirm: 'Are you sure?' }, class: 'waves-effect waves-light btn red' %>
         </div>
       <% end %>
     </div>
+
     <div class='parallax'>
       <%= image_tag(post.image_url) %>
     </div>
+
   </div>
 <% end %>
