--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,7 +6,7 @@
   </div>
 <% end %>
 
-<div class='section'>
+<div class='container'>
   <div class='row'>
     <div class='col s12'>
       <h4><%= @post.title %></h4>
