quick fix for slcaq link

--- a/app/views/pages/portfolio.html.erb
+++ b/app/views/pages/portfolio.html.erb
@@ -15,7 +15,7 @@
           </p>
         </div>
         <div class="card-action">
-          <%= link_to 'Demo', 'https://slcaq.herokuapp.com' %>
+          <%= link_to 'Demo', 'http://slcaq.herokuapp.com' %>
         </div>
         <div class="card-action">
           <%= link_to 'GitHub', 'https://github.com/ryancobb/sleepy-stream-9275' %>
