change slcaq github link

--- a/app/views/pages/portfolio.html.erb
+++ b/app/views/pages/portfolio.html.erb
@@ -18,7 +18,7 @@
           <%= link_to 'Demo', 'http://slcaq.herokuapp.com' %>
         </div>
         <div class="card-action">
-          <%= link_to 'GitHub', 'https://github.com/ryancobb/sleepy-stream-9275' %>
+          <%= link_to 'GitHub', 'https://github.com/ryancobb/slcaq' %>
         </div>
 			</div>
     </div>
