--- a/app/views/pages/portfolio.html.erb
+++ b/app/views/pages/portfolio.html.erb
@@ -4,7 +4,7 @@
 			<div class='card'>
         <div class='card-image'>
           <%= image_tag 'slcaq.png' %>
-          <span class="card-title black-text">Salt Lake City Air Quality</span>
+          <!-- <span class="card-title black-text">Salt Lake City Air Quality</span> -->
         </div>
         <div class="card-content">
           <p>
@@ -25,22 +25,17 @@
     <div class='col m12 l6'>
       <div class='card'>
         <div class='card-image'>
-          <%= image_tag 'slcaq.png' %>
-          <span class="card-title black-text">Salt Lake City Air Quality</span>
+          <%= image_tag 'cyanrobb.png' %>
+          <!-- <span class="card-title black-text">cyanrobb</span> -->
         </div>
         <div class="card-content">
           <p>
-            A simple app I built when I wasn't happy with air quality websites I had found.
-            This app consumes AirNow's API hourly and stores that data in its own
-            postgres database. It uses Rails for the backend, bootstrap for some styling
-            and Morris.js for the chart.
+            This is where you are now! It is also a blogging platform created in Rails complete with user/admin login using the Devise gem and
+						image upload to AWS using the Imagemagick and Fog gems. Styled using materialize.css.
           </p>
         </div>
         <div class="card-action">
-          <%= link_to 'Demo', 'https://slcaq.herokuapp.com' %>
-        </div>
-        <div class="card-action">
-          <%= link_to 'GitHub', 'https://github.com/ryancobb/sleepy-stream-9275' %>
+          <%= link_to 'GitHub', 'https://github.com/ryancobb/cyanrobb' %>
         </div>
 			</div>
 		</div>
