--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,29 +1,31 @@
 <div class='container'>
   <div class='section'>
     <%= form_for @post, html: { multipart: true } do |f| %>
-      <div class='card-panel'>
-        <div class='input-field'>
-          <%= f.label :title %>
-          <%= f.text_field :title %>
-        </div>
-        <div class='input-field'>
-          <%= f.label :content %>
-          <%= f.text_area :content, class: 'materialize-textarea' %>
-        </div>
-        <div class='file-field input-field'>
-          <div class='btn'>
-            <i class='material-icons'>perm_media</i>
-            <%= f.file_field :image %>
+        <div class='card-panel'>
+          <div class='input-field'>
+            <%= f.label :title %>
+            <%= f.text_field :title %>
           </div>
-          <div class='file-path-wrapper'>
-            <input class='file-path validate' type='text'>
+          <div class='input-field'>
+            <%= f.label :content %>
+            <%= f.text_area :content, class: 'materialize-textarea' %>
           </div>
+          <%= f.fields_for :@post_attachments do |p| %>
+              <div class='file-field input-field'>
+                <div class='btn'>
+                  <i class='material-icons'>perm_media</i>
+                  <%= f.file_field :photo, :multiple => true, name: "post_attachments[photo][]" %>
+                </div>
+                <div class='file-path-wrapper'>
+                  <input class='file-path validate' type='text'>
+                </div>
+              </div>
+          <% end %>
+          <br />
+          <button class='btn waves-effect waves-light' type='submit' name='action'>Submit
+            <i class='material-icons right'>send</i>
+          </button>
         </div>
-        <br />
-        <button class='btn waves-effect waves-light' type='submit' name='action'>Submit
-        <i class='material-icons right'>send</i>
-        </button>
-      </div>
-    <% end %>      
-  </div>            
+    <% end %>
+  </div>
 </div>
