--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,20 +1,23 @@
-<% if @post.image_url %>
-  <div class='parallax-container'>
-    <div class='parallax'>
-      <%= image_tag @post.image, style: 'display: block; transform: translate3d(0, 500px, 0px);', class: 'responsive-img' %>
-    </div>
-  </div>
-<% end %>
-
 <div class='container'>
   <div class='row'>
     <div class='col s12'>
-      <h4><%= @post.title %></h4>
+      <h3><%= @post.title %></h3>
       <p><%= simple_format @post.content %></p>
-      <% if current_user.try(:admin?) %>
-        <%= link_to 'Edit', edit_post_path(@post), class: 'waves-effect waves-light btn' %>
-        <%= link_to 'Delete', post_path(@post), method: :delete, data: { confirm: 'Are you sure?' }, class: 'waves-effect waves-light btn red' %>
-      <% end %>
     </div>
   </div>
+
+  <div class="row">
+    <% @post_attachments.each do |img| %>
+        <div class="col s12">
+      <%= image_tag img.photo_url, class: "responsive-img materialboxed" %>
+        </div>
+    <% end %>
+  </div>
+  <div class="row">
+  <% if current_user.try(:admin?) %>
+      <%= link_to 'Edit', edit_post_path(@post), class: 'waves-effect waves-light btn' %>
+      <%= link_to 'Delete', post_path(@post), method: :delete, data: { confirm: 'Are you sure?' }, class: 'waves-effect waves-light btn red' %>
+  <% end %>
+  </div>
+
 </div>
