fix padding on welcome page

--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -1,7 +1,7 @@
 <div class='valign-wrapper'>
 	 	<div id='banner-text' class='welcome-banner'>
 			<div clas="valign">
-	      <h1>Hello, I'm <span class='highlight'>Ryan Cobb</span>. I'm a Web Developer, Mechanical Engineer, Photographer and Musician.</h1>
+	      <h1>Hello, I'm <span class='highlight'>Ryan Cobb</span>. I'm a Web Developer, Mechanical Engineer and Photographer.</h1>
 				<div><%= link_to "View My Work", portfolio_path , class: 'waves-effect waves-light btn' %></div>
 			</div>
 		</div>
