--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -20,7 +20,7 @@
       </div>
 
       <div class='parallax'>
-        <%= image_tag(post.post_attachments.first.photo_url) if post.post_attachments %>
+        <%= image_tag(post.post_attachments.first.photo_url) unless post.post_attachments.first.nil? %>
       </div>
 
     </div>
