--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,10 +6,11 @@
           <h3 class="blog-title"><%= link_to post.title, post %></h3>
           <h6 class="time-ago"><%= time_ago_in_words(post.created_at) %> ago</h6>
         </div>
-
-        <div class='row blog-block'>
-          <p><%= link_to post.content, post %></p>
-        </div>
+        <% unless post.content.empty? %>
+            <div class='row blog-block'>
+              <p><%= link_to post.content, post %></p>
+            </div>
+        <% end %>
 
         <% if current_user.try(:admin?) %>
             <div class='row admin_actions'>
