--- a/app/views/pages/portfolio.html.erb
+++ b/app/views/pages/portfolio.html.erb
@@ -39,5 +39,21 @@
         </div>
 			</div>
 		</div>
+    <div class='col m12 l6'>
+      <div class='card'>
+        <div class='card-image'>
+        </div>
+        <div class="card-content">
+          <span class="card-title black-text">JScalc</span>
+          <p>
+            A calculator built in JS.
+          </p>
+        </div>
+        <div class="card-action">
+          <%= link_to 'Demo', 'http://ryancobb.github.io/JScalc/' %>
+          <%= link_to 'GitHub', 'https://github.com/ryancobb/JScalc' %>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
