add titles to portfolio

--- a/app/views/pages/portfolio.html.erb
+++ b/app/views/pages/portfolio.html.erb
@@ -4,9 +4,9 @@
 			<div class='card'>
         <div class='card-image'>
           <%= image_tag 'slcaq.png' %>
-          <!-- <span class="card-title black-text">Salt Lake City Air Quality</span> -->
         </div>
         <div class="card-content">
+          <span class="card-title black-text">SLC AQ</span>
           <p>
             A simple app I built when I wasn't happy with air quality websites I had found.
             This app consumes AirNow's API hourly and stores that data in its own
@@ -26,9 +26,9 @@
       <div class='card'>
         <div class='card-image'>
           <%= image_tag 'cyanrobb.png' %>
-          <!-- <span class="card-title black-text">cyanrobb</span> -->
         </div>
         <div class="card-content">
+          <span class="card-title black-text">CyanRobb</span>
           <p>
             This is where you are now! It is also a blogging platform created in Rails complete with user/admin login using the Devise gem and
 						image upload to AWS using the Imagemagick and Fog gems. Styled using materialize.css.
