fix JScalc card actions

--- a/app/views/pages/portfolio.html.erb
+++ b/app/views/pages/portfolio.html.erb
@@ -1,7 +1,7 @@
 <div class='container top-padding'>
-	<div class='row'>
-		<div class='col m12 l6'>
-			<div class='card'>
+  <div class='row'>
+    <div class='col m12 l6'>
+      <div class='card'>
         <div class='card-image'>
           <%= image_tag 'slcaq.png' %>
         </div>
@@ -20,7 +20,7 @@
         <div class="card-action">
           <%= link_to 'GitHub', 'https://github.com/ryancobb/slcaq' %>
         </div>
-			</div>
+      </div>
     </div>
     <div class='col m12 l6'>
       <div class='card'>
@@ -30,15 +30,16 @@
         <div class="card-content">
           <span class="card-title black-text">CyanRobb</span>
           <p>
-            This is where you are now! It is also a blogging platform created in Rails complete with user/admin login using the Devise gem and
-						image upload to AWS using the Imagemagick and Fog gems. Styled using materialize.css.
+            This is where you are now! It is also a blogging platform created in Rails complete with user/admin login
+            using the Devise gem and
+            image upload to AWS using the Imagemagick and Fog gems. Styled using materialize.css.
           </p>
         </div>
         <div class="card-action">
           <%= link_to 'GitHub', 'https://github.com/ryancobb/cyanrobb' %>
         </div>
-			</div>
-		</div>
+      </div>
+    </div>
     <div class='col m12 l6'>
       <div class='card'>
         <div class='card-image'>
@@ -51,6 +52,8 @@
         </div>
         <div class="card-action">
           <%= link_to 'Demo', 'http://ryancobb.github.io/JScalc/' %>
+        </div>
+        <div class="card-action">
           <%= link_to 'GitHub', 'https://github.com/ryancobb/JScalc' %>
         </div>
       </div>
