change some wording on portfolio

--- a/app/views/pages/portfolio.html.erb
+++ b/app/views/pages/portfolio.html.erb
@@ -30,9 +30,8 @@
         <div class="card-content">
           <span class="card-title black-text">CyanRobb</span>
           <p>
-            This is where you are now! It is also a blogging platform created in Rails complete with user/admin login
-            using the Devise gem and
-            image upload to AWS using the Imagemagick and Fog gems. Styled using materialize.css.
+            This is where you are now! It is also a blogging platform created in Rails complete with an admin login/interface and
+            image uploading to AWS.
           </p>
         </div>
         <div class="card-action">
@@ -47,7 +46,7 @@
         <div class="card-content">
           <span class="card-title black-text">JScalc</span>
           <p>
-            A calculator built in JS.
+            A calculator built using JS and jQuery.
           </p>
         </div>
         <div class="card-action">
